--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -5,7 +5,7 @@
 // $Purpose: Imports all the necessary .scss files for the project
 //
 
-//@import "icons";
+@import "icons";
 @import "reset";
 @import "settings";
 
@@ -18,4 +18,4 @@
 //@import "forms";
 //@import "header";
 //@import "footer";
-//@import "collections";
+@import "collections";
