--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,21 +47,31 @@
                 </div>
 
                 <nav class="container-nav">
+                    <a class="menu-toggle" href="#" onclick="UI.toggleMenu(this); return false;">
+                        <span class="menu-icon">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </span>
+                        Menu
+                    </a>
+
                     <ul id="nav-primary" class="menu">
                         <li class="menu-item">
-                            <a href="#">About</a>
+                            <a href="#about" onclick="UI.dismissMenu();">About</a>
                         </li>
 
                         <li class="menu-item">
-                            <a href="#">Folio</a>
+                            <a href="#folio" onclick="UI.dismissMenu();">Folio</a>
                         </li>
 
                         <li class="menu-item">
-                            <a href="#">Skills</a>
+                            <a href="#skills" onclick="UI.dismissMenu();">Skills</a>
                         </li>
 
                         <li class="menu-item">
-                            <a href="#">Say Hello</a>
+                            <a href="#contact" onclick="UI.dismissMenu();">Say Hello</a>
                         </li>
                     </ul>
                 </nav>
@@ -93,7 +103,7 @@
             {# Scripts - Prod #}
             <script src="/js/third-party/jquery-3.6.0.min.js"></script>
             <script src="/js/third-party/bootstrap.bundle.min.js"></script>
-{#            <script src="/js/base-min.js"></script>#}
+            <script src="/js/scripts-min.js"></script>
 
             {# Disable Javascript Debugging #}
             <script type="text/javascript">
@@ -103,7 +113,7 @@
             {# Scripts - Dev #}
             <script src="/scripts/third-party/jquery-3.6.0.js"></script>
             <script src="/scripts/third-party/bootstrap.bundle.js"></script>
-{#            <script src="/scripts/base.js"></script>#}
+            <script src="/scripts/scripts.js"></script>
         {% endif %}
     {% endblock %}
     </body>
