- Adding in meta description

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,7 @@
 
         {# SEO - Executed on a page specific basis #}
         {% block seo %}
+            <meta name="description" content="NeverDesign.net - The portfolio website of Jon de Araujo">
         {% endblock %}
 
         {# Blocking Javascript to be executed in the header #}
